add references to objects

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -948,7 +948,11 @@
           [
             "PaginatedResourceResponse",
             "/references/backend/types/paginated-resource-response"
-          ]
+          ],
+          [
+            "Backend User object",
+            "/references/backend/types/backend-user"
+          ] 
         ]
       ]
     ]
