add missing info for organization class

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -620,7 +620,7 @@
           ["DeletedObject", "/references/javascript/types/deleted-object"],
           ["OAuthProvider", "/references/javascript/types/oauth-provider"],
           ["OAuthStrategy", "/references/javascript/types/oauth-strategy"],
-          ["PaginatedResponse", "/references/javascript/types/paginated-response"],
+          ["ClerkPaginatedResponse", "/references/javascript/types/clerk-paginated-response"],
           ["CustomPage", "/references/javascript/types/custom-page"]
         ]
       ]
