feat: Add docs for API versioning

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -159,6 +159,9 @@
       ["Gatsby", "/backend-requests/handling/gatsby"],
       ["Ruby / Rails", "/backend-requests/handling/ruby-rails"],
       ["Manual JWT Verification", "/backend-requests/handling/manual-jwt"],
+      "# Versioning",
+      ["Overview", "/backend-requests/versioning/overview"],
+      ["Available versions", "/backend-requests/versioning/available-versions"],
       "# Resources",
       ["Session tokens", "/backend-requests/resources/session-tokens"],
       ["Rate limits", "/backend-requests/resources/rate-limits"]
