(wip) Added 'add email' docs, needs more work

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -293,10 +293,11 @@
       ["OAuth Connections", "/custom-flows/oauth-connections"],
       ["SAML Connections", "/custom-flows/saml-connections"],
       ["Sign out", "/custom-flows/sign-out"],
-      "# Account Updates and Chanses", 
+      "# Account Updates and Changes", 
       ["Multifactor", "/custom-flows/mfa"],
       ["Forgot Password", "/custom-flows/forgot-password"],
       ["Add OAuth Connection", "/custom-flows/add-oauth-connection"],
+      ["Add Email to Account", "/custom-flows/add-email"],
       ["User Impersonation", "/custom-flows/user-impersonation"],
       ["Invitations", "/custom-flows/invitations"],
       ["Embedded Email Links", "/custom-flows/embedded-email-links"],
