abstract types from references pages to dedicated pages in the types section of docs

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -611,6 +611,7 @@
         { "title": "Types" },
         [
           ["PublicUserData", "/references/javascript/types/public-user-data"],
+          ["SessionStatus", "/references/javascript/types/session-status"],
           ["RedirectOptions", "/references/javascript/types/redirect-options"],
           ["SignInRedirectOptions", "/references/javascript/types/sign-in-redirect-options"],
           ["SignUpRedirectOptions", "/references/javascript/types/sign-up-redirect-options"],
