add overview page for types section

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -610,6 +610,7 @@
       [
         { "title": "Types" },
         [
+          ["Overview", "/references/javascript/types/overview"],
           ["PublicUserData", "/references/javascript/types/public-user-data"],
           ["SessionStatus", "/references/javascript/types/session-status"],
           ["RedirectOptions", "/references/javascript/types/redirect-options"],
