--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -30,8 +30,10 @@
       "root": "guides"
     },
     [
+      ["Overview", "/guides/overview"],
       ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"],
-      ["Hide Personal Accounts and force organizations", "/guides/force-organizations"]
+      ["Hide Personal Accounts and force organizations", "/guides/force-organizations"],
+      ["Migrating to Clerk from Auth.js", "/guides/authjs-migration"]
     ]
   ],
   "---",
