Moved organization custom flows into the custom flows section

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -131,16 +131,7 @@
       "# Guides",
       ["Create roles and assign permissions", "/organizations/create-roles-permissions"],
       ["Verify the active user’s permissions", "/organizations/verify-user-permissions"],
-      ["Reassign the creator role", "/organizations/creator-role"],
-      "# Building custom flows",
-      ["Using metadata", "/organizations/metadata"],
-      ["Creating organizations", "/organizations/creating-organizations"],
-      ["Updating organizations", "/organizations/updating-organizations"],
-      ["Inviting users", "/organizations/inviting-users"],
-      ["Managing roles", "/organizations/managing-roles"],
-      ["Viewing memberships", "/organizations/viewing-memberships"],
-      ["Create a custom organization switcher", "/organizations/custom-organization-switcher"],
-      ["Verified domains", "/organizations/verified-domains"]
+      ["Reassign the creator role", "/organizations/creator-role"]
     ]
   ],
   [
@@ -303,7 +294,17 @@
       [
         "Multi-session applications",
         "/custom-flows/multi-session-applications"
-      ]
+      ],
+      "# Organizations",
+      ["Using metadata", "/custom-flows/metadata"],
+      ["Creating organizations", "/custom-flows/creating-organizations"],
+      ["Updating organizations", "/custom-flows/updating-organizations"],
+      ["Inviting users", "/custom-flows/inviting-users"],
+      ["Managing roles", "/custom-flows/managing-roles"],
+      ["Viewing memberships", "/custom-flows/viewing-memberships"],
+      ["Create a custom organization switcher", "/custom-flows/custom-organization-switcher"],
+      ["Verified domains", "/custom-flows/verified-domains"]
+
     ]
   ],
   "---",
