new guide structure, add next and remix generated guides

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -30,8 +30,14 @@
       "root": "guides"
     },
     [
-      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"],
-      ["Hide Personal Accounts and force organizations", "/guides/force-organizations"]
+      [
+        "Implement basic Role Based Access Control with metadata",
+        "/guides/basic-rbac"
+      ],
+      [
+        "Hide Personal Accounts and force organizations",
+        "/guides/force-organizations"
+      ]
     ]
   ],
   "---",
@@ -51,8 +57,14 @@
       ["Restrictions", "/authentication/configuration/restrictions"],
       ["SAML at Clerk", "/authentication/saml-at-clerk"],
       "# Prebuilt Components",
-      ["<SignIn />", "https://clerk.com/docs/components/authentication/sign-in"],
-      ["<SignUp />", "https://clerk.com/docs/components/authentication/sign-up"],
+      [
+        "<SignIn />",
+        "https://clerk.com/docs/components/authentication/sign-in"
+      ],
+      [
+        "<SignUp />",
+        "https://clerk.com/docs/components/authentication/sign-up"
+      ],
       "# Social Connections",
       ["Overview", "/authentication/social-connections/overview"],
       [
@@ -79,7 +91,10 @@
           ["HubSpot", "/authentication/social-connections/hubspot"],
           ["Line", "/authentication/social-connections/line"],
           ["Linear", "/authentication/social-connections/linear"],
-          ["LinkedIn (Deprecated)", "/authentication/social-connections/linkedin"],
+          [
+            "LinkedIn (Deprecated)",
+            "/authentication/social-connections/linkedin"
+          ],
           ["LinkedIn", "/authentication/social-connections/linkedin-oidc"],
           ["Notion", "/authentication/social-connections/notion"],
           ["Slack", "/authentication/social-connections/slack"],
@@ -104,26 +119,51 @@
       ["Deleting users", "/users/deleting-users"],
       "# Prebuilt Components",
       ["<UserButton />", "https://clerk.com/docs/components/user/user-button"],
-      ["<UserProfile />", "https://clerk.com/docs/components/user/user-profile"],
+      [
+        "<UserProfile />",
+        "https://clerk.com/docs/components/user/user-profile"
+      ],
       "# Guides",
       ["Sync Clerk data to your backend with webhooks", "/users/sync-data"],
       ["Web3 authentication", "/users/web3"]
     ]
   ],
   [
-    { "title": "Organizations, Roles, and Permissions", "icon": "user-group", "root": "organizations" },
+    {
+      "title": "Organizations, Roles, and Permissions",
+      "icon": "user-group",
+      "root": "organizations"
+    },
     [
       ["Overview", "/organizations/overview"],
       ["Roles and permissions", "/organizations/roles-permissions"],
       "# Prebuilt Components",
-      ["<CreateOrganization />", "https://clerk.com/docs/components/organization/create-organization"],
-      ["<OrganizationProfile />", "https://clerk.com/docs/components/organization/organization-profile"],
-      ["<OrganizationSwitcher />", "https://clerk.com/docs/components/organization/organization-switcher"],
-      ["<OrganizationList />", "https://clerk.com/docs/components/organization/organization-list"],
+      [
+        "<CreateOrganization />",
+        "https://clerk.com/docs/components/organization/create-organization"
+      ],
+      [
+        "<OrganizationProfile />",
+        "https://clerk.com/docs/components/organization/organization-profile"
+      ],
+      [
+        "<OrganizationSwitcher />",
+        "https://clerk.com/docs/components/organization/organization-switcher"
+      ],
+      [
+        "<OrganizationList />",
+        "https://clerk.com/docs/components/organization/organization-list"
+      ],
       ["<Protect>", "https://clerk.com/docs/components/protect"],
       "# Guides",
-      ["Create roles and assign permissions", "/organizations/create-roles-permissions"],
-      ["Verify the active user’s permissions", "/organizations/verify-user-permissions"],
+      [
+        "Create roles and assign permissions",
+        "/organizations/create-roles-permissions"
+      ],
+      [
+        "Verify the active user’s permissions",
+        "/organizations/verify-user-permissions"
+      ],
       ["Reassign the creator role", "/organizations/creator-role"],
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
@@ -132,7 +172,10 @@
       ["Inviting users", "/organizations/inviting-users"],
       ["Managing roles", "/organizations/managing-roles"],
       ["Viewing memberships", "/organizations/viewing-memberships"],
-      ["Create a custom organization switcher", "/organizations/custom-organization-switcher"],
+      [
+        "Create a custom organization switcher",
+        "/organizations/custom-organization-switcher"
+      ],
       ["Verified domains", "/organizations/verified-domains"]
     ]
   ],
@@ -177,8 +220,8 @@
       "# Advanced Usage",
       ["Custom redirects", "/account-portal/custom-redirects"],
       ["Direct links", "/account-portal/direct-links"],
-      ["User & Organization Pages","/account-portal/user-profile-org-profile"],
-      ["Disable Account Portal","/account-portal/disable-account-portal"]
+      ["User & Organization Pages", "/account-portal/user-profile-org-profile"],
+      ["Disable Account Portal", "/account-portal/disable-account-portal"]
     ]
   ],
   [
@@ -199,7 +242,10 @@
       ["<UserProfile />", "/components/user/user-profile"],
 
       "# Organization Components",
-      ["<CreateOrganization />", "/components/organization/create-organization"],
+      [
+        "<CreateOrganization />",
+        "/components/organization/create-organization"
+      ],
       [
         "<OrganizationProfile />",
         "/components/organization/organization-profile"
@@ -208,10 +254,7 @@
         "<OrganizationSwitcher />",
         "/components/organization/organization-switcher"
       ],
-      [
-        "<OrganizationList />",
-        "/components/organization/organization-list"
-      ],
+      ["<OrganizationList />", "/components/organization/organization-list"],
 
       "# Customization",
       [
@@ -228,7 +271,10 @@
         { "title": "Custom Pages" },
         [
           ["<UserProfile />", "/components/customization/user-profile"],
-          ["<OrganizationProfile />", "/components/customization/organization-profile"]
+          [
+            "<OrganizationProfile />",
+            "/components/customization/organization-profile"
+          ]
         ]
       ],
       "# Control Components",
@@ -329,7 +375,6 @@
       ["Migrate to Clerk", "/deployments/migrate-overview"],
       ["Migrate from Firebase", "/deployments/migrate-from-firebase"],
       ["Exporting user data", "/deployments/exporting-users"]
-
     ]
   ],
   [
@@ -365,7 +410,10 @@
       ["Email Deliverability", "/troubleshooting/email-deliverability"],
       ["Script Loading", "/troubleshooting/script-loading"],
       "# Help & Support",
-      ["Create a minimal reproduction", "/troubleshooting/create-a-minimal-reproduction"],
+      [
+        "Create a minimal reproduction",
+        "/troubleshooting/create-a-minimal-reproduction"
+      ],
       ["Community Discord", "https://clerk.com/discord"],
       ["Contact Support", "https://clerk.com/support"]
     ]
@@ -379,13 +427,18 @@
     [
       ["Overview", "/upgrade-guides/overview"],
       ["Long term support policy", "/upgrade-guides/long-term-support"],
-      "# SDKs",
-      ["Upgrading Next.js (v4 to v5)", "/upgrade-guides/upgrading-nextjs-from-v4-to-v5"],
-      ["Upgrading from v4 to v5", "/upgrade-guides/upgrading-from-v4-to-v5"],
-      ["Upgrading from v2 to v3", "/upgrade-guides/upgrading-from-v2-to-v3"],
+      "# Upgrading v4 to v5",
+      ["Overview (to remove)", "/upgrade-guides/v4-to-v5/general"],
+      ["Remix", "/upgrade-guides/v4-to-v5/remix"],
+      ["Next.js", "/upgrade-guides/v4-to-v5/nextjs"],
+      "# Upgrading v2 to v3",
+      ["Overview", "/upgrade-guides/upgrading-from-v2-to-v3"],
       "# Dashboard",
       ["API Key Changes", "/upgrade-guides/api-keys"],
-      ["URL-based session syncing", "/upgrade-guides/url-based-session-syncing"],
+      [
+        "URL-based session syncing",
+        "/upgrade-guides/url-based-session-syncing"
+      ],
       ["Progressive Sign up", "/upgrade-guides/progressive-sign-up"]
     ]
   ],
@@ -407,10 +460,22 @@
       ["Password protection and rules", "/security/password-protection"],
       ["Clerk Telemetry", "/telemetry"],
       "# Protect accounts from attacks",
-      ["Brute force attacks and locking user accounts","/security/user-lock-guide"],
-      ["Customize max login attempts and duration of of user lockout", "/security/customize-user-lockout"],
-      ["Unlock accounts from the Clerk Dashboard", "/security/unlock-user-accounts"],
-      ["Programmatically lock and unlock accounts", "/security/programmatically-lock-user-accounts"]
+      [
+        "Brute force attacks and locking user accounts",
+        "/security/user-lock-guide"
+      ],
+      [
+        "Customize max login attempts and duration of of user lockout",
+        "/security/customize-user-lockout"
+      ],
+      [
+        "Unlock accounts from the Clerk Dashboard",
+        "/security/unlock-user-accounts"
+      ],
+      [
+        "Programmatically lock and unlock accounts",
+        "/security/programmatically-lock-user-accounts"
+      ]
     ]
   ],
   "# SDK References",
@@ -420,9 +485,15 @@
       ["Overview", "/references/nextjs/overview"],
       "# Guides",
       ["Read session and user data", "/references/nextjs/read-session-data"],
-      ["Add custom sign up and sign in pages", "/references/nextjs/custom-signup-signin-pages"],
+      [
+        "Add custom sign up and sign in pages",
+        "/references/nextjs/custom-signup-signin-pages"
+      ],
       ["Integrate Clerk into your app with tRPC", "/references/nextjs/trpc"],
-      ["Use Clerk with Next.js 12 and older", "/references/nextjs/usage-with-older-versions"],
+      [
+        "Use Clerk with Next.js 12 and older",
+        "/references/nextjs/usage-with-older-versions"
+      ],
       "# App Router References",
       ["auth()", "/references/nextjs/auth"],
       ["currentUser()", "/references/nextjs/current-user"],
@@ -516,7 +587,10 @@
           ["Members", "/references/javascript/organization/members"],
           ["Invitations", "/references/javascript/organization/invitations"],
           ["Domains", "/references/javascript/organization/domains"],
-          ["Membership Requests", "/references/javascript/organization/membership-request"]
+          [
+            "Membership Requests",
+            "/references/javascript/organization/membership-request"
+          ]
         ]
       ],
       [
@@ -527,10 +601,7 @@
         "Organization Membership",
         "/references/javascript/organization-membership"
       ],
-      [
-        "Organization Domain",
-        "/references/javascript/organization-domain"
-      ],
+      ["Organization Domain", "/references/javascript/organization-domain"],
       [
         "Organization Membership Request",
         "/references/javascript/organization-membership-request"
@@ -608,15 +679,30 @@
         [
           ["PublicUserData", "/references/javascript/types/public-user-data"],
           ["RedirectOptions", "/references/javascript/types/redirect-options"],
-          ["SignInRedirectOptions", "/references/javascript/types/sign-in-redirect-options"],
-          ["SignUpRedirectOptions", "/references/javascript/types/sign-up-redirect-options"],
-          ["SignInInitialValues", "/references/javascript/types/sign-in-initial-values"],
-          ["SignUpInitialValues", "/references/javascript/types/sign-up-initial-values"],
+          [
+            "SignInRedirectOptions",
+            "/references/javascript/types/sign-in-redirect-options"
+          ],
+          [
+            "SignUpRedirectOptions",
+            "/references/javascript/types/sign-up-redirect-options"
+          ],
+          [
+            "SignInInitialValues",
+            "/references/javascript/types/sign-in-initial-values"
+          ],
+          [
+            "SignUpInitialValues",
+            "/references/javascript/types/sign-up-initial-values"
+          ],
           ["EmailLinkError", "/references/javascript/types/email-link-error"],
           ["DeletedObject", "/references/javascript/types/deleted-object"],
           ["OAuthProvider", "/references/javascript/types/oauth-provider"],
           ["OAuthStrategy", "/references/javascript/types/oauth-strategy"],
-          ["ClerkPaginatedResponse", "/references/javascript/types/clerk-paginated-response"],
+          [
+            "ClerkPaginatedResponse",
+            "/references/javascript/types/clerk-paginated-response"
+          ],
           ["CustomPage", "/references/javascript/types/custom-page"]
         ]
       ]
@@ -632,10 +718,7 @@
       ["Overview", "references/nodejs/overview"],
       ["Available methods", "references/nodejs/available-methods"],
       ["Connect/Express Middleware", "/docs/backend-requests/handling/nodejs"],
-      [
-        "Networkless token verification",
-        "references/nodejs/token-verification"
-      ]
+      ["Networkless token verification", "references/nodejs/token-verification"]
     ]
   ],
   [
@@ -690,9 +773,7 @@
       "root": "references/redwood",
       "tag": "Community"
     },
-    [
-      ["Redwood", "https://redwoodjs.com/docs/auth/clerk"]
-    ]
+    [["Redwood", "https://redwoodjs.com/docs/auth/clerk"]]
   ],
   [
     {
@@ -701,9 +782,7 @@
       "root": "references/svelte",
       "tag": "Community"
     },
-    [
-      ["Svelte", "https://github.com/markjaquith/clerk-sveltekit"]
-    ]
+    [["Svelte", "https://github.com/markjaquith/clerk-sveltekit"]]
   ],
   [
     {
@@ -712,9 +791,7 @@
       "root": "references/vue",
       "tag": "Community"
     },
-    [
-      ["Vue", "https://vue-clerk.vercel.app/"]
-    ]
+    [["Vue", "https://vue-clerk.vercel.app/"]]
   ],
   [
     {
@@ -723,9 +800,7 @@
       "root": "references/elysia",
       "tag": "Community"
     },
-    [
-      ["Elysia", "https://github.com/wobsoriano/elysia-clerk"]
-    ]
+    [["Elysia", "https://github.com/wobsoriano/elysia-clerk"]]
   ],
   [
     {
@@ -734,9 +809,7 @@
       "root": "references/rust",
       "tag": "Community"
     },
-    [
-      ["Rust", "https://github.com/cincinnati-ventures/clerk-rs"]
-    ]
+    [["Rust", "https://github.com/cincinnati-ventures/clerk-rs"]]
   ],
   [
     {
@@ -746,7 +819,10 @@
       "tag": "Community"
     },
     [
-      ["Hono", "https://github.com/honojs/middleware/tree/main/packages/clerk-auth"]
+      [
+        "Hono",
+        "https://github.com/honojs/middleware/tree/main/packages/clerk-auth"
+      ]
     ]
   ],
   [
@@ -756,9 +832,7 @@
       "root": "references/csharp",
       "tag": "Community"
     },
-    [
-      ["C#", "https://github.com/Hawxy/Clerk.Net"]
-    ]
+    [["C#", "https://github.com/Hawxy/Clerk.Net"]]
   ],
   "# API References",
   [
@@ -860,7 +934,10 @@
           ["getSession()", "/references/backend/sessions/get-session"],
           ["getSessionList()", "/references/backend/sessions/get-session-list"],
           ["getToken()", "/references/backend/sessions/get-token"],
-          ["authenticateRequest()", "/references/backend/sessions/authenticate-request"],
+          [
+            "authenticateRequest()",
+            "/references/backend/sessions/authenticate-request"
+          ],
           ["verifySession()", "/references/backend/sessions/verify-session"],
           ["revokeSession()", "/references/backend/sessions/revoke-session"]
         ]
