(wip) Refactoring and adding to MFA docs

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -280,11 +280,12 @@
       ["Email & Password", "/custom-flows/email-password"],
       ["Email / SMS OTP", "/custom-flows/email-sms-otp"],
       ["Email links", "/custom-flows/email-links"],
+      ["Email & Password + MFA", "/custom-flows/email-password-mfa"],
       ["OAuth Connections", "/custom-flows/oauth-connections"],
       ["SAML Connections", "/custom-flows/saml-connections"],
       ["Sign out", "/custom-flows/sign-out"],
       "# Account Updates and Changes", 
-      ["Multifactor", "/custom-flows/mfa"],
+      ["Add Multifactor", "/custom-flows/add-mfa"],
       ["Forgot Password", "/custom-flows/forgot-password"],
       ["Add OAuth Connection", "/custom-flows/add-oauth-connection"],
       ["Add Email to Account", "/custom-flows/add-email"],
