update add email guide

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -288,7 +288,7 @@
       ["Add Multifactor", "/custom-flows/add-mfa"],
       ["Forgot Password", "/custom-flows/forgot-password"],
       ["Add OAuth Connection", "/custom-flows/add-oauth-connection"],
-      ["Add Email to Account", "/custom-flows/add-email"],
+      ["Add an email to a user's account", "/custom-flows/add-email"],
       ["User Impersonation", "/custom-flows/user-impersonation"],
       ["Invitations", "/custom-flows/invitations"],
       ["Embedded Email Links", "/custom-flows/embedded-email-links"],
