--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -276,7 +276,7 @@
     [
       ["Overview", "/custom-flows/overview"],
       ["Error handling", "/custom-flows/error-handling"],
-      "# Authenticaiton",
+      "# Authentication",
       ["Email & Password", "/custom-flows/email-password"],
       ["Email / SMS OTP", "/custom-flows/email-sms-otp"],
       ["Email links", "/custom-flows/email-links"],
