all SDK guides generated

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -428,7 +428,7 @@
       ["Overview", "/upgrade-guides/overview"],
       ["Long term support policy", "/upgrade-guides/long-term-support"],
       "# Upgrading v4 to v5",
-      ["Overview (to remove)", "/upgrade-guides/v4-to-v5/general"],
+      ["Overview", "/upgrade-guides/v4-to-v5/general"],
       ["Remix", "/upgrade-guides/v4-to-v5/remix"],
       ["Next.js", "/upgrade-guides/v4-to-v5/nextjs"],
       "# Upgrading v2 to v3",
