add ban, unban, lock, and unlock user operations

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -775,6 +775,10 @@
           ["getUserOAuthAccessToken()", "/references/backend/user/get-user-oauth-access-token"],
           ["createUser()", "/references/backend/user/create-user"],
           ["verifyPassword()", "/references/backend/user/verify-password"],
+          ["banUser()", "/references/backend/user/ban-user"],
+          ["unbanUser()", "/references/backend/user/unban-user"],
+          ["lockUser()", "/references/backend/user/lock-user"],
+          ["unlockUser()", "/references/backend/user/unlock-user"],
           ["updateUser()", "/references/backend/user/update-user"],
           ["updateUserMetadata()", "/references/backend/user/update-user-metadata"],
           ["deleteUser()", "/references/backend/user/delete-user"],
