--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -427,11 +427,19 @@
     [
       ["Overview", "/upgrade-guides/overview"],
       ["Long term support policy", "/upgrade-guides/long-term-support"],
-      "# Upgrading v4 to v5",
-      ["Overview", "/upgrade-guides/v4-to-v5/general"],
-      ["Remix", "/upgrade-guides/v4-to-v5/remix"],
-      ["Next.js", "/upgrade-guides/v4-to-v5/nextjs"],
-      "# Upgrading v2 to v3",
+      ["Clerk SDK versioning", "/upgrade-guides/sdk-versioning"],
+      "# Upgrading to Core 2",
+      ["Overview", "/upgrade-guides/core-2/overview"],
+      ["Next.js", "/upgrade-guides/core-2/nextjs"],
+      ["Remix", "/upgrade-guides/core-2/remix"],
+      ["Expo", "/upgrade-guides/core-2/expo"],
+      ["Fastify", "/upgrade-guides/core-2/fastify"],
+      ["React", "/upgrade-guides/core-2/react"],
+      ["Node", "/upgrade-guides/core-2/node"],
+      ["Backend", "/upgrade-guides/core-2/backend"],
+      ["Chrome Extension", "/upgrade-guides/core-2/chrome-extension"],
+      ["JavaScript", "/upgrade-guides/core-2/javascript"],
+      "# Upgrading to Core 1",
       ["Overview", "/upgrade-guides/upgrading-from-v2-to-v3"],
       "# Dashboard",
       ["API Key Changes", "/upgrade-guides/api-keys"],
