Added to manifest

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -379,7 +379,10 @@
       ["Deprecation", "/errors/deprecation"],
       ["Domains", "/errors/domains"],
       ["Entitlements", "/errors/entitlements"],
-      ["Features", "/errors/features"]
+      ["Features", "/errors/features"],
+      ["Sign-in", "/errors/sign-in"],
+      ["Sign-up", "/errors/sign-up"],
+      ["Sign-in-tokens", "/errors/sign-in-tokens"]
     ]
   ],
     [
