fix titles of each page

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -366,8 +366,8 @@
       ["Overview", "/errors/overview"],
       ["Actor tokens", "/errors/actor-tokens"],
       ["Allowlist identifiers", "/errors/allowlist-identifiers"],
-      ["Applications", "/errors/applications"],
-      ["Auth", "/errors/auth"],
+      ["Application", "/errors/application"],
+      ["Authentication", "/errors/authentication"],
       ["Backup codes", "/errors/backup-codes"],
       ["Billing", "/errors/billing"],
       ["Billing accounts", "/errors/billing-accounts"],
