--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -612,7 +612,9 @@
       [
         { "title": "Types" },
         [
+          ["Overview", "/references/javascript/types/overview"],
           ["PublicUserData", "/references/javascript/types/public-user-data"],
+          ["SessionStatus", "/references/javascript/types/session-status"],
           ["RedirectOptions", "/references/javascript/types/redirect-options"],
           ["SignInRedirectOptions", "/references/javascript/types/sign-in-redirect-options"],
           ["SignUpRedirectOptions", "/references/javascript/types/sign-up-redirect-options"],
