--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -681,8 +681,7 @@
       "root": "references/remix"
     },
     [
-      ["<ClerkApp />", "references/remix/clerk-app"],
-      ["ClerkErrorBoundary()", "references/remix/clerk-error-boundary"]
+      ["<ClerkApp />", "references/remix/clerk-app"]
     ]
   ],
   [
