add email address backend sdk operations

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -899,8 +899,25 @@
         ]
       ],
       [
-        { "title": "Emails" },
-        [["createEmail()", "/references/backend/emails/create-email"]]
+        { "title": "Email addresses" },
+        [
+          [
+            "getEmailAddress()",
+            "/references/backend/email-addresses/get-email-address"
+          ],
+          [
+            "createEmailAddress()",
+            "/references/backend/email-addresses/create-email-address"
+          ],
+          [
+            "updateEmailAddress()",
+            "/references/backend/email-addresses/update-email-address"
+          ],
+          [
+            "deleteEmailAddress()",
+            "/references/backend/email-addresses/delete-email-address"
+          ]
+        ]
       ]
     ]
   ],
