move db errors to allowlist identifiers; move comms errors to identifications

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -373,13 +373,12 @@
       ["Billing accounts", "/errors/billing-accounts"],
       ["Blocklist identifiers", "/errors/blocklist-identifiers"],
       ["Clients", "/errors/clients"],
-      ["Comms", "/errors/comms"],
       ["Cookie", "/errors/cookie"],
-      ["DB", "/errors/db"],
       ["Deprecation", "/errors/deprecation"],
       ["Domains", "/errors/domains"],
       ["Entitlements", "/errors/entitlements"],
       ["Features", "/errors/features"],
+      ["Identifications", "/errors/identifications"],
       ["Sign-in", "/errors/sign-in"],
       ["Sign-up", "/errors/sign-up"],
       ["Sign-in-tokens", "/errors/sign-in-tokens"]
