(wip) Pages examples still need adding/updating, some work on authorization side, general edits

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -472,7 +472,7 @@
       ["Requiring Authentication", "/references/nextjs/route-protection-requiring-authentication"],
       [{ "title": "Requiring Authorization", "root": "/references/nextjs/route-protection-requiring-authorization", "tag": "B2B SaaS"},
           [
-      ["Test", "/references/nextjs/current-user"]
+      ["Requiring Authorization", "/references/nextjs/route-protection-requiring-authorization"]
     ]],
       "# App Router References",
       ["auth()", "/references/nextjs/auth"],
