DOCS-627 Error documentation (#580)
Co-authored-by: Jacob M-G Evans <27247160+JacobMGEvans@users.noreply.github.com>
Co-authored-by: Jacob MG Evans <jacobmgevans@gmail.com>
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -358,6 +358,34 @@
   ],
   [
     {
+      "title": "Error Handling",
+      "icon": "support",
+      "root": "errors"
+    },
+    [
+      ["Overview", "/errors/overview"],
+      ["Actor tokens", "/errors/actor-tokens"],
+      ["Allowlist identifiers", "/errors/allowlist-identifiers"],
+      ["Application", "/errors/application"],
+      ["Authentication", "/errors/authentication"],
+      ["Backup codes", "/errors/backup-codes"],
+      ["Billing", "/errors/billing"],
+      ["Billing accounts", "/errors/billing-accounts"],
+      ["Blocklist identifiers", "/errors/blocklist-identifiers"],
+      ["Clients", "/errors/clients"],
+      ["Cookie", "/errors/cookie"],
+      ["Deprecation", "/errors/deprecation"],
+      ["Domains", "/errors/domains"],
+      ["Entitlements", "/errors/entitlements"],
+      ["Features", "/errors/features"],
+      ["Identifications", "/errors/identifications"],
+      ["Sign-in", "/errors/sign-in"],
+      ["Sign-up", "/errors/sign-up"],
+      ["Sign-in-tokens", "/errors/sign-in-tokens"]
+    ]
+  ],
+    [
+    {
       "title": "Troubleshooting",
       "icon": "support",
       "root": "troubleshooting"
