remove withClerkMiddleware page from manifest(sidenav)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -451,9 +451,7 @@
       ["buildClerkProps()", "/references/nextjs/build-clerk-props"],
       "# Other References",
       ["Authentication Object", "/references/nextjs/authentication-object"],
-      ["authMiddleware()", "/references/nextjs/auth-middleware"],
-      "# Deprecated",
-      ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
+      ["authMiddleware()", "/references/nextjs/auth-middleware"]
     ]
   ],
   [
