--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -479,9 +479,7 @@
       ["buildClerkProps()", "/references/nextjs/build-clerk-props"],
       "# Other References",
       ["Authentication Object", "/references/nextjs/authentication-object"],
-      ["authMiddleware()", "/references/nextjs/auth-middleware"],
-      "# Deprecated",
-      ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
+      ["authMiddleware()", "/references/nextjs/auth-middleware"]
     ]
   ],
   [
