Added cookie doc to deployments section

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -330,8 +330,9 @@
       "# Migrations",
       ["Migrate to Clerk", "/deployments/migrate-overview"],
       ["Migrate from Firebase", "/deployments/migrate-from-firebase"],
-      ["Exporting user data", "/deployments/exporting-users"]
-
+      ["Exporting user data", "/deployments/exporting-users"],
+      "# Cookie Information",
+      ["Clerk Cookie Information", "/deployments/clerk-cookies"]
     ]
   ],
   [
