chore: Fastify wip

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -156,6 +156,7 @@
       ["JWT Templates", "/backend-requests/making/jwt-templates"],
       "# Handling requests",
       ["Node.js & Express", "/backend-requests/handling/nodejs"],
+      ["Fastify", "/backend-requests/handling/fastify"],
       ["Go", "/backend-requests/handling/go"],
       ["Gatsby", "/backend-requests/handling/gatsby"],
       ["Ruby / Rails", "/backend-requests/handling/ruby-rails"],
