add getUserOAuthAccessToken to backend sdk

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -809,7 +809,8 @@
           ["getCount()", "/references/backend/user/get-count"],
           ["createUser()", "/references/backend/user/create-user"],
           ["updateUser()", "/references/backend/user/update-user"],
-          ["deleteUser()", "/references/backend/user/delete-user"]
+          ["deleteUser()", "/references/backend/user/delete-user"],
+          ["getUserOAuthAccessToken()", "/references/backend/user/get-user-oauth-access-token"]
         ]
       ],
       [
