--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -947,6 +947,15 @@
             "/references/backend/email-addresses/delete-email-address"
           ]
         ]
+      ],
+      [
+        { "title": "Types" },
+        [
+          [
+            "PaginatedResourceResponse",
+            "/references/backend/types/paginated-resource-response"
+          ]
+        ]
       ]
     ]
   ],
