reorganize webhook docs

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -108,7 +108,6 @@
       ["<UserButton />", "https://clerk.com/docs/components/user/user-button"],
       ["<UserProfile />", "https://clerk.com/docs/components/user/user-profile"],
       "# Guides",
-      ["Sync Clerk data to your backend with webhooks", "/users/sync-data"],
       ["Web3 authentication", "/users/web3"]
     ]
   ],
@@ -300,7 +299,10 @@
     { "title": "Integrations", "icon": "puzzle", "root": "integrations" },
     [
       ["Overview", "/integrations/overview"],
-      ["Webhooks", "/integrations/webhooks"],
+      "# Webhooks",
+      ["Overview", "/integrations/webhooks/overview"],
+      ["Sync Clerk data to your backend with webhooks", "/integrations/webhooks/sync-data"],
+      ["Handling webhooks with Inngest", "/integrations/webhooks/inngest"],
       "# Databases",
       ["Convex", "/integrations/databases/convex"],
       ["Fauna", "/integrations/databases/fauna"],
@@ -310,9 +312,7 @@
       ["Nhost", "/integrations/databases/nhost"],
       ["Supabase", "/integrations/databases/supabase"],
       "# Analytics",
-      ["Google Analytics", "/integrations/analytics/google-analytics"],
-      "# Webhooks",
-      ["Inngest", "/integrations/webhooks/inngest"]
+      ["Google Analytics", "/integrations/analytics/google-analytics"]
     ]
   ],
   [
