--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -31,6 +31,7 @@
     },
     [
       ["Overview", "/guides/overview"],
+      ["Use Image Optimization with imageUrl", "/guides/image-optimization/imageurl-image-optimization"],
       ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"],
       ["Hide Personal Accounts and force organizations", "/guides/force-organizations"],
       ["Migrating to Clerk from Auth.js", "/guides/authjs-migration"]
