add getUserOAuthAccessToken to backend sdk (#744)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -810,7 +810,8 @@
           ["getCount()", "/references/backend/user/get-count"],
           ["createUser()", "/references/backend/user/create-user"],
           ["updateUser()", "/references/backend/user/update-user"],
-          ["deleteUser()", "/references/backend/user/delete-user"]
+          ["deleteUser()", "/references/backend/user/delete-user"],
+          ["getUserOAuthAccessToken()", "/references/backend/user/get-user-oauth-access-token"]
         ]
       ],
       [
@@ -945,6 +946,15 @@
           [
             "deleteEmailAddress()",
             "/references/backend/email-addresses/delete-email-address"
+          ]
+        ]
+      ],
+      [
+        { "title": "Types" },
+        [
+          [
+            "PaginatedResourceResponse",
+            "/references/backend/types/paginated-resource-response"
           ]
         ]
       ]
