update overview; update manifest for consistency

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -695,7 +695,7 @@
     [
       ["Overview", "references/go/overview"],
       ["Verifying sessions", "references/go/verifying-sessions"],
-      ["Backend examples", "references/go/other-examples"],
+      ["Use Clerk Go for Backend API Operations", "references/go/other-examples"],
       ["Go SDK repository", "https://github.com/clerk/clerk-sdk-go"]
     ]
   ],
