move redwood to community section (#735)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -14,7 +14,6 @@
       ["Next.js", "/quickstarts/nextjs"],
       ["Remix", "/quickstarts/remix"],
       ["Gatsby", "/quickstarts/gatsby"],
-      ["RedwoodJS", "/quickstarts/redwood"],
       "# Frontend",
       ["JavaScript", "/quickstarts/javascript"],
       ["React", "/quickstarts/react"],
@@ -728,6 +727,7 @@
       "tag": "Community"
     },
     [
+      ["Overview", "/references/redwood/overview"],
       ["Redwood", "https://redwoodjs.com/docs/auth/clerk"]
     ]
   ],
