--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -469,7 +469,12 @@
       ["Read session and user data", "/references/nextjs/read-session-data"],
       ["Add custom sign up and sign in pages", "/references/nextjs/custom-signup-signin-pages"],
       ["Integrate Clerk into your app with tRPC", "/references/nextjs/trpc"],
-      ["Use Clerk with Next.js 12 and older", "/references/nextjs/usage-with-older-versions"],
+      "# Route Protection",
+      ["Requiring Authentication", "/references/nextjs/route-protection-requiring-authentication"],
+      [{ "title": "Requiring Authorization", "root": "/references/nextjs/route-protection-requiring-authorization", "tag": "B2B SaaS"},
+          [
+      ["Requiring Authorization", "/references/nextjs/route-protection-requiring-authorization"]
+    ]],
       "# App Router References",
       ["auth()", "/references/nextjs/auth"],
       ["currentUser()", "/references/nextjs/current-user"],
@@ -479,8 +484,12 @@
       ["getAuth()", "/references/nextjs/get-auth"],
       ["buildClerkProps()", "/references/nextjs/build-clerk-props"],
       "# Other References",
+      ["clerkMiddleware()", "/references/nextjs/clerk-middleware"],
       ["Authentication Object", "/references/nextjs/authentication-object"],
-      ["authMiddleware()", "/references/nextjs/auth-middleware"]
+      "# Deprecated",
+      ["authMiddleware()", "/references/nextjs/auth-middleware"],
+      ["Use Clerk with Next.js 12 and older", "/references/nextjs/usage-with-older-versions"],
+      ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
     ]
   ],
   [
