Change "Authentication object" to "Auth object" throughout the docs (#753)
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -466,7 +466,7 @@
       ["getAuth()", "/references/nextjs/get-auth"],
       ["buildClerkProps()", "/references/nextjs/build-clerk-props"],
       "# Other References",
-      ["Authentication Object", "/references/nextjs/authentication-object"],
+      ["Auth Object", "/references/nextjs/auth-object"],
       ["authMiddleware()", "/references/nextjs/auth-middleware"],
       "# Deprecated",
       ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
