--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -19,8 +19,8 @@
       ["Fastify Quickstart", "/quickstarts/fastify"],
       ["JavaScript Quickstart", "/quickstarts/javascript"],
       "# Advanced",
-      ["Project Templates", "#TODO"],
-      ["Request a Quickstart", "#TODO"]
+      ["Project Templates", "/#TODO"],
+      ["Request a Quickstart", "/#TODO"]
     ]
   ],
   [
@@ -32,45 +32,45 @@
     [
       "# Common Workflows",
       ["Username and Password", "/guides/basic-rbac"],
-      ["Single Sign-on (SSO)", "#TODO"],
-      ["Passwordless Authentication", "#TODO"],
-      ["Adding Multi-factor Authentication (MFA)", "#TODO"],
-      ["Custom Roles and Permissions", "#TODO"],
-      ["SAML / Enterprise Connections", "#TODO"],
-      ["Customizing Session Timeout", "#TODO"],
-      ["Localization", "#TODO"],
-      ["Syncing user data via webhooks", "#TODO"],
-      ["Managing User metadata", "#TODO"],
+      ["Single Sign-on (SSO)", "/#TODO"],
+      ["Passwordless Authentication", "/#TODO"],
+      ["Adding Multi-factor Authentication (MFA)", "/#TODO"],
+      ["Custom Roles and Permissions", "/#TODO"],
+      ["SAML / Enterprise Connections", "/#TODO"],
+      ["Customizing Session Timeout", "/#TODO"],
+      ["Localization", "/#TODO"],
+      ["Syncing user data via webhooks", "/#TODO"],
+      ["Managing User metadata", "/#TODO"],
       
       "# Customizing your app",
-      ["UI Customization", "#TODO"],
-      ["Clerk Account Portal", "#TODO"],
-      ["Email and SMS Templates", "#TODO"],
-      ["Restricting access to your app", "#TODO"],
+      ["UI Customization", "/#TODO"],
+      ["Clerk Account Portal", "/#TODO"],
+      ["Email and SMS Templates", "/#TODO"],
+      ["Restricting access to your app", "/#TODO"],
 
       "# Securing your app",
-      ["Authenticating request to your backend", "#TODO"],
-      ["Bot detection", "#TODO"],
-      ["Banning users", "#TODO"],
-      ["Prevent brute force attacks", "#TODO"],
+      ["Authenticating request to your backend", "/#TODO"],
+      ["Bot detection", "/#TODO"],
+      ["Banning users", "/#TODO"],
+      ["Prevent brute force attacks", "/#TODO"],
       
       "# Development",
-      ["Testing with Clerk", "#TODO"],
-      ["Managing Environments", "#TODO"],
-      ["Migrating your data", "#TODO"],
-      ["Deployment", "#TODO"],
-      ["Upgrade Guides", "#TODO"],
-      ["System Limits", "#TODO"],
-      ["Troubleshooting", "#TODO"],
+      ["Testing with Clerk", "/#TODO"],
+      ["Managing Environments", "/#TODO"],
+      ["Migrating your data", "/#TODO"],
+      ["Deployment", "/#TODO"],
+      ["Upgrade Guides", "/#TODO"],
+      ["System Limits", "/#TODO"],
+      ["Troubleshooting", "/#TODO"],
 
       "# Clerk Dashboard",
-      ["Overview", "#TODO"],
-      ["Configuring Satellite Domains", "#TODO"],
-      ["Proxying the Frontend API", "#TODO"],
+      ["Overview", "/#TODO"],
+      ["Configuring Satellite Domains", "/#TODO"],
+      ["Proxying the Frontend API", "/#TODO"],
       
 
       "# From scratch",
-      ["Rebuilding existing Clerk flows for more control", "#TODO"]
+      ["Rebuilding existing Clerk flows for more control", "/#TODO"]
 
     ]
   ],
@@ -458,18 +458,7 @@
       "icon": "book-open",
       "root": "references/ruby"
     },
-    [
-      {
-        "title": "Redwood",
-        "icon": "redwood",
-        "root": "references/redwood",
-        "tag": "Community"
-      },
-      [
-        ["Redwood", "https://redwoodjs.com/docs/auth/clerk"]
-      ]
-    ]
-    
+    [["Redwood", "https://redwoodjs.com/docs/auth/clerk"]]
   ],
  
   "# Reference",
